# stand_updater

./: README.md  pyproject.toml  updater.py
classes/: __init__.py  constant.py  job.py  migration.py  pod.py  project_manager.py  schema.py
configs/: app.yml  aspects.yml  logging.yml  namespaces.yml  projects.yml
helpers/aspects/: decorators.py  loader.py
helpers/console/: live.py  render.py
helpers/di/: __init__.py  app.py  aspects.py  clients.py  render.py  services.py
